<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017, Team LTT
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/static_data" >
        <CheckBoxPreference android:title="@string/engine_temp"
            android:defaultValue="true"
            android:key="@string/key_engine_temp" />
        <CheckBoxPreference android:title="@string/current_mpg"
            android:defaultValue="true"
            android:key="@string/key_mpg" />
        <CheckBoxPreference android:title="@string/current_mph"
            android:defaultValue="false"
            android:key="@string/key_mph" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dynamic_data">
        <CheckBoxPreference android:title="@string/graph_mpg"
            android:defaultValue="false"
            android:key="@string/key_mpg_d" />
        <CheckBoxPreference android:title="@string/graph_mph"
            android:defaultValue="false"
            android:key="@string/key_mph_d" />
        <CheckBoxPreference android:title="@string/graph_tire_pressure"
            android:defaultValue="false"
            android:key="@string/key_tire_pressure_d" />
    </PreferenceCategory>
</PreferenceScreen>
