<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017, Team LTT
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_car_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teamltt.carcare.activity.CarInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:id="@+id/text_car_info_title"
        android:text="@string/text_car_info_title"
        android:textSize="32sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp">
        <TableRow>
            <TextView
                android:layout_column="0"
                android:layout_weight="1"
                android:id="@+id/text_year"
                android:text="@string/text_year"
                android:textSize="20sp"
                android:padding="3dp" />
            <EditText

                android:layout_column="1"
                android:layout_weight="3"
                android:id="@+id/field_year"
                android:hint="@string/hint_year"
                android:textSize="20sp"
                android:padding="3dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="1"
                android:id="@+id/text_make"
                android:text="@string/text_make"
                android:textSize="20sp"
                android:padding="3dp" />
            <EditText
                android:layout_weight="3"
                android:id="@+id/field_make"
                android:hint="@string/hint_make"
                android:textSize="20sp"
                android:padding="3dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="1"
                android:id="@+id/text_model"
                android:text="@string/text_model"
                android:textSize="20sp"
                android:padding="3dp"/>
            <EditText
                android:layout_weight="3"
                android:id="@+id/field_model"
                android:hint="@string/hint_model"
                android:textSize="20sp"
                android:padding="3dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="1"
                android:id="@+id/text_VIN"
                android:text="@string/text_VIN"
                android:textSize="20sp"
                android:padding="3dp"/>
            <EditText
                android:layout_weight="3"
                android:id="@+id/field_VIN"
                android:hint="@string/hint_VIN"
                android:textSize="20sp"
                android:padding="3dp"/>

        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="1"
                android:id="@+id/text_license_plate"
                android:text="@string/text_license_plate"
                android:textSize="20sp"
                android:padding="3dp"/>
            <EditText
                android:layout_weight="3"
                android:id="@+id/field_license_plate"
                android:hint="@string/hint_license_plate"
                android:textSize="20sp"
                android:padding="3dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="1"
                android:id="@+id/text_color"
                android:text="@string/text_color"
                android:textSize="20sp"
                android:padding="3dp"/>
            <EditText
                android:layout_weight="3"
                android:id="@+id/field_color"
                android:hint="@string/hint_color"
                android:textSize="20sp"
                android:padding="3dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="1"
                android:id="@+id/text_nickname"
                android:text="@string/text_nickname"
                android:textSize="20sp"
                android:padding="3dp" />

            <EditText
                android:layout_weight="3"
                android:id="@+id/field_nickname"
                android:hint="@string/hint_nickname"
                android:textSize="20sp"
                android:padding="3dp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_back"
            android:onClick="back"
            android:layout_gravity="start"
            android:id="@+id/button_back"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save"
            android:onClick="saveInfo"
            android:layout_gravity="end" />
    </LinearLayout>
</LinearLayout>
