<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017, Team LTT
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.teamltt.carcare.activity.DynamicActivity" >

    <TextView
        android:id="@+id/textDynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/title_dynamic"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="6dp">
        <Button
            android:id="@+id/buttonFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showDatePickerDialog"
            android:text="@string/button_from" />

        <TextView
            android:id="@+id/textFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_from" />

        <Button
            android:id="@+id/buttonTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showDatePickerDialog"
            android:text="@string/button_to" />

        <TextView
            android:id="@+id/textTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_to"/>
    </LinearLayout>
    <!-- graph goes here-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textDataValue"
        android:text="@string/data_value"/>

</LinearLayout>

